--- a/index.html
+++ b/index.html
@@ -1,27 +1,28 @@
-    <!DOCTYPE html>
-    <html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Scroll Reveal Animation</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Scroll Reveal Animation</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 
-    <body>
-        <section class="section">
+<body>
+    <section class="section">
 
-            <h1>We refuse to accept a future where out devices are exhausting, addictive, and <span
-                    class="distracting">distracting
-                </span>
-            </h1>
+        <h1>Why was the JavaScript developer sad?
+<br>
+            Because he couldn’t <span class="null">null</span> his <span class="distracting">feelings
+            </span>
+        </h1>
 
-        </section>
-        <script src="https://unpkg.com/split-type"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
-        <script src="https://unpkg.com/lenis@1.2.3/dist/lenis.min.js"></script>
-        <script src="script.js"></script>
-    </body>
+    </section>
+    <script src="https://unpkg.com/split-type"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
+    <script src="https://unpkg.com/lenis@1.2.3/dist/lenis.min.js"></script>
+    <script src="script.js"></script>
+</body>
 
-    </html>
+</html>
